Correct message reset and width display adjusted on mobile

--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
+:root,
+html,
 body {
-  background-color: #232323;
+  background-color: hsl(0, 0%, 14%);
   margin: 0;
+  padding: 0;
   font-family: "Roboto Mono", monospace;
+  width: 100%;
+  height: 100%;
 }
-#container {
+#square-container {
   margin: 0 auto;
-  width: 30rem;
+  width: 60%;
   padding-top: 20px;
+}
+.navbar,
+#head,
+#stripe {
+  width: 100%;
 }
 #navbrand {
   font-size: x-large;
@@ -25,13 +35,12 @@ body {
 }
 h1,
 #colorDisplay,
-p,
+h5,
 .navbar {
   text-align: center;
   background-color: white;
   margin: 0;
 }
-
 h2 {
   text-transform: uppercase;
 }
